# vkSumi

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  vkSumi.conf.example
.github/workflows/: ci.yml  release.yml
layer/: meson.build  vksumi.json  vksumi.json.in
packaging/: PKGBUILD  vksumi.spec
packaging/flatpak/: org.freedesktop.Platform.VulkanLayer.vkSumi.yml
scripts/: run.fish  vksumi-toggle
shaders/: color.frag  fullscreen.vert
src/: config.cpp  config.hpp  keybinds.cpp  keybinds.hpp  layer.cpp  logger.hpp  meson.build  swapchain.cpp  swapchain.hpp  vkdispatch.cpp  vkdispatch.hpp  vkfuncs.hpp
